# na-webhook-source

./: .dockerignore  .gitignore  Dockerfile  README.md  func.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish-ghcr.yml
config/: configmap.yaml  deployment.yaml  projects-config.example.json  sinkbinding.yaml
function/: __init__.py  app.py  func.py
